# GEMM-Optimization

./: .gitignore  CMakeLists.txt  FIXES_APPLIED.md  PERFORMANCE_ANALYSIS.md  PHASE1_DOCUMENTATION.md  QUICK_REBUILD_GUIDE.md  README.md  RESULTS_ANALYSIS.md  RUN_PHASE1.md  TESTING_GUIDE.md  setup_phase1.out  setup_phase1.sbatch  setup_phase1.sh
build_profile/: CMakeCache.txt  Makefile  benchmark_gemm  cmake_install.cmake
lab1/: lab-1.md
lab1/src/utils/: tensor.cuh
logs/: phase1_complete.out  phase1_complete_1409589.out  phase2_complete.out  phase3_complete.out  phase4_complete.out
phase1/: CMakeLists.txt  analyze_phase1.py  benchmark_cutlass.cu  benchmark_gemm.cu
results/: analysis_report.txt  analysis_report_phase1.txt  analysis_report_phase2.txt  analysis_report_phase4.txt  benchmark_results.csv  benchmark_results_phase1.csv  benchmark_results_phase2.csv  benchmark_results_phase4.csv  gpu_specs.txt  gpu_specs_phase1.txt  gpu_specs_phase2.txt
results/cutlass/: cutlass_f16tc.gemm.csv  cutlass_fp32.gemm.csv
results/final_phase4/: benchmark_output_phase4.txt
results_1.2/: analysis_report.txt  cublas_fp32.csv  cublas_mixed.csv  cublas_results.csv  gpu_specs.txt
scripts/: check_current_status.sh  check_job_status.sh  profile_comparison.sbatch  run_all.sbatch  run_all_baselines.sbatch  run_benchmark.sbatch  run_gpu_specs.sbatch  run_phase1_1.sbatch  run_phase1_2.sbatch  run_phase1_complete.sbatch  run_phase2_complete.sbatch  run_phase3_complete.sbatch  run_phase4_complete.sbatch  run_phase4_final.sbatch  run_profiling.sbatch  run_roofline.sbatch  test_quick.sh
scripts/logs/: phase1_complete_1894008.out
src/: analyze_nsight_profile.py  benchmark_gemm.cu  generate_final_report.py  gpu_specs.cu  performance.py  phase1_summary.py  profile_tensorcore.cu  profile_tensorcore_only.cu  roofline_analysis.py  test.cu
src/baselines/: cublas_bench.cu  plot_roofline_fixed.py
src/ops/: op_cross_entropy.cuh  op_elemwise.cuh  op_mm.cuh  op_mm_tensorcore.cuh  op_mm_tensorcore_3stage.cuh  op_mm_tensorcore_64x64.cuh  op_mm_tensorcore_aggressive.cuh  op_mm_tensorcore_high_perf.cuh  op_mm_tensorcore_large_tile.cuh  op_mm_tensorcore_optimized.cuh  op_mm_tensorcore_ultra.cuh  op_reduction.cuh
src/utils/: check_error.cuh  dataset_mnist.hh
